fixed the scrollbar at the bottom

--- a/code/style.css
+++ b/code/style.css
@@ -6,8 +6,8 @@ body {
   font-family: 'DM Sans', sans-serif;
   width: 100%;
   height: 100%;
-  margin-right: 5%;
-  margin-left: 5%;
+  margin: 0%;
+  padding-left: 5%;
 }
 
 @media (max-width: 667px)  {
